--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
                             <transformers>
                                 <!-- Sets the Main-Class in the Manifest -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.example.Main</mainClass>
+                                    <mainClass>com.example.Hello</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
